Taylor organized all of Chu's files and deleted all unused ones.

--- a/template.html
+++ b/template.html
@@ -11,9 +11,9 @@
 
     <title>SideKicK</title>
 
-    <link href="bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <link href="simple-sidebar.css" rel="stylesheet">
+    <link href="css/simple-sidebar.css" rel="stylesheet">
 
 
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -75,10 +75,10 @@
 <!-- /#wrapper -->
 
 <!-- jQuery -->
-<script src="jquery.js"></script>
+<script src="js/jquery.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="bootstrap.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
 <!-- Menu Toggle Script -->
 <script>
